--- a/app/package.json
+++ b/app/package.json
@@ -1,17 +1,23 @@
 {
-  "name": "developing-with-docker",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "author": "Nana Janashia",
-  "license": "ISC",
+  "name": "my-todolist",
+  "version": "0.1.0",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "mongodb": "^3.3.3"
+    "body-parser": "^1.16.0",
+    "ejs": "^2.5.5",
+    "express": "^4.14.0",
+    "method-override": "^3.0.0",
+    "sanitizer": "^0.1.3"
+  },
+  "scripts": {
+    "start": "node app.js",
+    "test": "mocha --recursive --exit"
+  },
+  "author": "riaan@entersekt.com",
+  "description": "Basic to do list exercise",
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^6.2.1",
+    "nyc": "^14.1.1",
+    "supertest": "^4.0.2"
   }
 }
